--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,4 @@
-/* @import 'normalize.css';/* bring in normalize.css styles */
+@import 'normalize.css';/* bring in normalize.css styles */
 
 body {
   margin: 0;
@@ -12,14 +12,4 @@ body {
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
-} */
-
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
 }
-
